[gd_scene load_steps=4 format=3 uid="uid://bivpy44qgcvdq"]

[ext_resource type="Script" uid="uid://bm3e88vnqx2pw" path="res://scenes/player/bullets/generic-bullet.gd" id="1_wvn5r"]
[ext_resource type="Texture2D" uid="uid://lj0q8273oj2b" path="res://sprites/test_bullet.png" id="2_wld71"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d1cmj"]
radius = 3.0
height = 8.0

[node name="Enemy-bullet" type="Area2D"]
collision_layer = 0
collision_mask = 11
script = ExtResource("1_wvn5r")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wld71")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_d1cmj")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
